refactor: atualiza interfaces e contratos de request e response associados ao swagger
